<resources>
    <string name="app_name">HBS</string>
    <string name="welcome_to">Welcome To</string>
    <string name="home_budgeting_system_hbs">Home Budgeting System (HBS)</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don`t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="sami">Sami</string>
    <string name="last_name">Last Name</string>
    <string name="khan">Khan</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="open_nav_view">Open Navigation View</string>
    <string name="close_nav_view">Close Navigation View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="expense_fragment">Expense Fragment</string>
    <string name="income_fragment">Income Fragment</string>
    <string name="income">Income</string>
    <string name="income_value">000.0</string>
    <string name="expense_value">000.0</string>
    <string name="expense">Expense</string>
    <string name="amount">AMOUNT:</string>
    <string name="type">TYPE</string>
    <string name="note">NOTE</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="income_fragment_txt">income</string>
    <string name="expenses">Expenses</string>
    <string name="expense_databoard">Expense:</string>
    <string name="income_dashboard">Income:</string>
    <string name="title_activity_main_category">MainCategoryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>