<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DashboardFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_5sdp"
        android:elevation="@dimen/_10sdp"
        app:cardBackgroundColor="@color/colorPrimary"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/black"
                        android:text="@string/income"

                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/red"
                        android:text="@string/expense"
                        />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_7sdp"
                >
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/income_set_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/black"
                        android:text="@string/income_value"

                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/expense_set_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/red"
                        android:text="@string/expense_value"
                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        >


            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                ></com.github.mikephil.charting.charts.BarChart>
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:layout_marginTop="@dimen/_10sdp"-->
<!--                >-->
<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/income_dashboard"-->
<!--                    android:textAppearance="?android:textAppearanceLarge"-->
<!--                    android:padding="@dimen/_10sdp"-->
<!--                    />-->
<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/income_recycler">-->
<!--                </androidx.recyclerview.widget.RecyclerView>-->
<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/expense_databoard"-->
<!--                    android:textAppearance="?android:textAppearanceLarge"-->
<!--                    android:padding="@dimen/_10sdp"-->
<!--                    />-->
<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/expense_recyler"-->
<!--                    ></androidx.recyclerview.widget.RecyclerView>-->
<!--            </LinearLayout>-->


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="gone"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_160sdp"
            >
            <TextView
                android:id="@+id/income_ft_text"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_40sdp"

                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorTextIcons"
                android:background="@drawable/expense1"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5sdp"

                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/income_ft_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@color/background_floating_btn"
                android:elevation="@dimen/_6sdp"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="@dimen/_12sdp"
                android:src="@drawable/expense"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_90sdp"
            >
            <TextView
                android:id="@+id/expense_ft_text"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_40sdp"

                android:textColor="@color/colorTextIcons"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/expense1"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/expense_ft_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@color/income_background_btn"
                app:elevation="@dimen/_6sdp"
                app:fabSize="mini"
                app:pressedTranslationZ="@dimen/_12sdp"
                android:visibility="invisible"
                android:src="@drawable/expense"
                />
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_main_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:backgroundTint="@color/colorTextIcons"
            app:fabSize="normal"
            android:src="@drawable/income"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>